feat(front/register.html): 오타 수정

--- a/front/public/views/register.html
+++ b/front/public/views/register.html
@@ -8,7 +8,7 @@
   </head>
     <body>
     <div id="register-form-wrap">
-      <h2>Login</h2>
+      <h2>Register</h2>
       <form id="register-form" method="post" action = "http://localhost:8081/members/join">
         <p>
         <input type="text" id="email" name="email" placeholder="Email Address" required><i class="validation"><span></span><span></span></i>
